[gd_scene load_steps=5 format=3 uid="uid://db7bh4o7800m4"]

[ext_resource type="Script" path="res://floors/1/1.gd" id="1_4dud4"]
[ext_resource type="PackedScene" uid="uid://nmo68shnomyg" path="res://interaction_screen.tscn" id="3_fhtks"]
[ext_resource type="PackedScene" uid="uid://c0b40e0mjtfw0" path="res://interaction_screen_with_bookshelf.tscn" id="4_5pc5a"]
[ext_resource type="PackedScene" uid="uid://dgd2o4kb0fjvf" path="res://hud.tscn" id="6_toqov"]

[node name="1" type="StaticBody3D"]
script = ExtResource("1_4dud4")

[node name="InteractionLayer" type="CanvasLayer" parent="."]

[node name="InteractionScreen" parent="InteractionLayer" instance=ExtResource("3_fhtks")]
visible = false

[node name="InteractionScreenWithBookshelf" parent="InteractionLayer" instance=ExtResource("4_5pc5a")]
visible = false

[node name="HUD" parent="." instance=ExtResource("6_toqov")]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
